--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_quiz">QuizActivity</string>
+    <string name="title_activity_feedback">FeedbackActivity</string>
 
 </resources>
